--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.3.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -61,7 +66,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>by.exadel.application.console.Main</mainClass>
+                            <mainClass>by.exadel.application.Main.Main</mainClass>
                         </manifest>
                     </archive>
 
