--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,13 @@
     <groupId>by.exadel.application</groupId>
     <artifactId>JavaProjects</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <modules>
+        <module>Controller</module>
+        <module>Service</module>
+        <module>Dao</module>
+        <module>Model</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -108,6 +114,12 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+ <!--       <dependency>
+            <groupId>by.exadel.application</groupId>
+            <artifactId>Dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>-->
     </dependencies>
 
     <build>
