--- a/Dao/src/main/resources/validation.properties
+++ b/Dao/src/main/resources/validation.properties
@@ -1,5 +1,8 @@
 Required=This field is required.
-Size.userForm.userName=Username must be between 6 and 32 characters.
-Duplicate.userForm.userName=Such username is already exists.
+Size.userForm.email=Email must be between 6 and 32 characters.
+Duplicate.userForm.email=Such email is already exists.
 Size.userForm.password=Password must be over 8 characters.
-Different.userForm.password=Passwords don't mutch.
+Different.userForm.password=Passwords don't much.
+Size.userForm.username=Username must by between 4 and 16 characters.
+Size.userForm.age=Field of age can't be empty.
+Value.userForm.age=Age can't be negative value.
