--- a/Controller/src/main/webapp/WEB-INF/web.xml
+++ b/Controller/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,21 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/ExceptionHandler</location>
+    </error-page>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/ExceptionHandler</location>
+    </error-page>
+
+    <error-page>
+        <error-code>400</error-code>
+        <location>/ExceptionHandler</location>
+    </error-page>
+
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
