Update page ErrorAddTask

--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,19 @@
                 <version>1.16.20</version>
                 <scope>provided</scope>
             </dependency>
+
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.0.1</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>1.8.6</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
