--- a/Controller/src/main/webapp/WEB-INF/web.xml
+++ b/Controller/src/main/webapp/WEB-INF/web.xml
@@ -47,5 +47,10 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    
+<!--    <error-page>
+        <error-code>404</error-code>
+        <location>pages/error-404.jsp</location>
+    </error-page>-->
 
 </web-app>
